ビューの修正

--- a/app/assets/stylesheets/account.css
+++ b/app/assets/stylesheets/account.css
@@ -7,3 +7,52 @@
   height: 30px;
   width: 30px;
 }
+
+.item-border {
+  border-radius: 50%;
+  background-color: #F0F0F3;
+  box-shadow: -10px -10px 30px #ffffff, 10px 10px 30px rgba(174, 174, 192, 0.4), inset -10px -10px 10px rgba(174, 174, 192, 0.25), inset 10px 10px 10px #ffffff;
+}
+
+.item-border:hover {
+  box-shadow: inset -10px -10px 10px rgba(255, 255, 255, 0.7), inset 10px 10px 10px rgba(174, 174, 192, 0.2);
+}
+
+.post-border {
+  border: #F0F0F3;
+  box-shadow: -10px -10px 30px #ffffff, 10px 10px 30px rgba(174, 174, 192, 0.4), inset -10px -10px 10px rgba(174, 174, 192, 0.25), inset 10px 10px 10px #ffffff;
+}
+
+.post-border:hover {
+  box-shadow: inset -10px -10px 10px rgba(255, 255, 255, 0.7), inset 10px 10px 10px rgba(174, 174, 192, 0.2);
+}
+
+.bg-color {
+  background-color: #f0f0f3;
+}
+
+.h-30 {
+  height: 40%;
+}
+
+.h-70 {
+  height: 55%;
+}
+
+.account-size:hover {
+  transform: scale(1.2, 1.2);
+  transition: 0.3s all;
+}
+
+.account-new {
+  max-height: 220px;
+  min-height: 220px;
+  max-width: 220px;
+  min-width: 220px;
+  border-radius: 50%;
+}
+
+.post-img {
+  height: 250px;
+  width: 250px;
+}
