--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -147,7 +147,7 @@
       <li>
         <a href="/accounts" data-method="get" class="nav-link link-dark">
           <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-          Accounts
+          Account
         </a>
       </li>
     </ul>
