--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -16,10 +16,10 @@
 
 .post-btn {
   position: relative;
-  min-width: 100px;
-  max-width: 100px;
-  min-height: 100px;
-  max-height: 100px;
+  min-width: 200px;
+  max-width: 200px;
+  min-height: 200px;
+  max-height: 200px;
   box-sizing: border-box;
   padding: 0 10px;
   text-align: center;
@@ -49,4 +49,34 @@
 .post-btn:hover:after {
   transform: translate(-50%, -50%) scale(1);
   border-color: #fff;
+}
+
+.bg-1 {
+  background-color: #96B6C1;
+}
+
+.bg-2 {
+  background-color: #C0D3DA;
+}
+
+.bg-3 {
+  background-color: #F3F3F3;
+}
+
+.bg-4 {
+  background-color: #D9D9D7;
+}
+
+.bg-5 {
+  background-color: #decfbc;
+}
+
+.shadow-main {
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+}
+
+.shadow-main:hover {
+  box-shadow: none;
+  transform: translateY(0.5rem);
+  transition: 0.3s all;
 }
