--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,16 +1,15 @@
-    <%= image_tag "closet-img.png", class: "p-1 mb-4 mt-4 text-white rounded row header-img align-self-center" %>
-      <div class="header row">
-        <div class="col-md-6 px-5 header-text">
-          <h1 class="display-4 fst-italic">Closet Curation</h1>
-          <%# <p class="lead my-3">aaaaaaaaaa</p> %>
-        </div>
-        <div class="col-md-6 px-0 row align-self-center">
-        </div>
-      </div>
-        <div class="row p-3 mb-4 d-flex justify-content-center">
-        <div class="col-7 row border rounded-pill bg-light d-flex justify-content-between p-4">
-          <div class="lead col-md-3 d-flex justify-content-center"><%= link_to "Post ITEM", new_item_path, method: :get, class: "fw-bold post-btn" %></div>
-          <div class="lead col-md-3 d-flex justify-content-center"><%= link_to "Post OOTD", new_post_path, method: :get, class: "fw-bold post-btn" %></div>
+    <%# <%= image_tag "closet-img.png", class: "p-1 mb-4 mt-4 text-white rounded row header-img align-self-center" %> 
+      <%# <div class="header row"> %>
+        <%# <div class="col-md-6 px-5 header-text"> %>
+          <%# <h1 class="display-4 fst-italic">Closet Curation</h1> %>
+        <%# </div> %>
+        <%# <div class="col-md-6 px-0 row align-self-center"> %>
+        <%# </div> %>
+      <%# </div> %>
+        <div class="row pt-3 mb-4 d-flex justify-content-center">
+        <div class="col-7 row d-flex justify-content-between p-4">
+          <div class="lead col-md-3 d-flex justify-content-center"><%= link_to "Post ITEM", new_item_path, method: :get, class: "fw-bold post-btn shadow-main" %></div>
+          <div class="lead col-md-3 d-flex justify-content-center"><%= link_to "Post OOTD", new_post_path, method: :get, class: "fw-bold post-btn shadow-main" %></div>
 
         </div>
         </div>
