--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,6 +1,6 @@
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column overflow-auto img-1 px-5 pt-5">
+<main class="container d-flex flex-column overflow-auto img-1 px-5 pt-5 bg-color">
 
   <div class = "row img-up">
   <div class="row col-12 d-flex justify-content-center">
@@ -18,7 +18,7 @@
           </div>
           <div class="g-0 flex-md-row mb-4 h-md-250 position-relative row text-center">
             <div class="position-static p-3">
-              <h4 class="mb-1 text-muted"><%= account.name%></h4>
+              <h4 class="mb-1 text-muted fw-bold"><%= account.name%></h4>
             </div>
           </div>
         <% end %>
