--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
     <link href="signin.css" rel="stylesheet">
   </head>
   
-  <body>
+  <body class="bg-color">
     <%= render "shared/sidebar" %>
     
 <main class="form-signin text-center">
