--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column overflow-auto img-1 px-5 ">
+<main class="container d-flex flex-column overflow-auto img-1 px-5 bg-color">
 
     <%= render "shared/header" %>
 
