--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -38,12 +38,10 @@
     <link href="blog.css" rel="stylesheet">
 
   </head>
-<body class="w-100">
+<body class="w-100 bg-color">
     <main  class="top-page">
   <%= render "shared/sidebar" %>
 
-<%# <main class="position-relative"> %>
-    <%# <%= image_tag "main-img.png", class: "main-img" %> 
 <div class="container d-flex flex-column overflow-auto img-1 px-5 ">
   <%= render "shared/header" %>
 
