--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,4 +1,5 @@
 <%= render "shared/sidebar" %>
+<body class="bg-color">
 <div class="bg-light rounded shadow p-4 mx-auto">
   <div class = "d-flex flex-column text-center">
     <div class = "post-img">
@@ -35,3 +36,4 @@
     <% end %>
   </div>
 </div>
+</body>
