--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,8 @@
 <%= render "shared/sidebar" %>
-<%= form_with model: @post, local: true, class: "mx-auto col-4" do |f| %>
-  <div class="post-box justify-content-center">
-    <p class="text-center mb-3 fs-2">コーディネートを編集する</p>
+<body class="bg-color">
+<%= form_with model: @post, local: true, class: "mx-auto p-5 bg-white border rounded col-4 h-75 overflow-scroll" do |f| %>
+  <div class=" justify-content-center">
+    <p class="text-center mb-3 fs-2">コーディネート編集</p>
 
           <div class = "add-form row p-3">
       <% Account.all.each do |account| %>
@@ -36,6 +37,7 @@
     <%= f.collection_select(:low_id, Low.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.collection_select(:high_id, High.all, :id, :name, {}, {class:"form-select mb-2"}) %>
     <%= f.text_area :content, class:"form-control mb-3", placeholder:"Memo" %>
-    <p class= "text-center"><%= f.submit "POST" ,class:"btn btn-primary" %></p>
+    <p class= "text-center"><%= f.submit "POST" ,class:"btn btn-primary col-12" %></p>
   </div>
 <% end %>
+</body>
