--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,11 +1,11 @@
   <%= render "shared/sidebar" %>
 
-<main class="container d-flex flex-column overflow-auto img-1 px-5 pt-5 bg-color">
+<main class="d-flex flex-column overflow-auto img-1 px-5 pt-5 bg-color w-100">
 
   <div class = "row img-up">
-  <div class="row col-12 d-flex justify-content-center">
-  <div class=" col-lg-3 col-md-6 d-flex justify-content-center">
-      <%= link_to "Account NEW", new_account_path, method: :get, class: "fw-bold post-btn" %>
+    <div class="row col-12 d-flex justify-content-center">
+      <div class=" col-lg-3 col-md-6 d-flex justify-content-center">
+        <%= link_to "Account NEW", new_account_path, method: :get, class: "fw-bold post-btn" %>
       </div>
       <% @accounts.each do |account|%>
         <%= link_to account_path(account.id), class: "text-decoration-none col-lg-3 col-md-6 row-md" do %>
@@ -25,4 +25,6 @@
       <% end %>
     </div>
   </div>
+
+
 </main>
