--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -28,8 +28,8 @@
       <% if current_user.id == @item.user_id %>
         <div class="row d-flex justify-content-center">
           <div class="row col mt-3 d-flex justify-content-center">
-            <%= link_to "編集", edit_item_path(@item.id), method: :get, class: "btn bg-primary-subtle border border-primary-subtle text-primary-emphasis rounded-pill col-4 me-1" %>
-            <%= link_to "削除", item_path(@item.id), method: :delete, class: "btn bg-danger-subtle border border-danger-subtle text-danger-emphasis rounded-pill col-4" %>
+            <%= link_to "編集", edit_item_path(@item.id), method: :get, class: "btn bg-primary-subtle shadow-btn text-primary-emphasis rounded-pill col-4 me-1" %>
+            <%= link_to "削除", item_path(@item.id), method: :delete, class: "btn bg-danger-subtle shadow-btn text-danger-emphasis rounded-pill col-4" %>
           </div>
         </div>
       <% end %>
