--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -29,12 +29,14 @@
               <% else %>
                 <% passed_block.call day, sorted_events.fetch(day, []) %>
               <% end %>
-              <% posts.each do |post| %>
-              <%= post.weather.name %> <%= post.low.name %>℃~<%= post.high.name %>℃ <br>
-              <% post.items.each do |item| %>
-                <%= image_tag item.image.variant(resize: '90x90') %>
-              <% end %>
-            <% end %>
+              <%# <% posts.each do |post| %>
+              <%# <%= post.weather.name %>
+              <%# <%= post.low.name %>
+              <%# ℃~<%= post.high.name %>
+              <%# <% post.items.each do |item| %>
+                <%# <%= image_tag item.image.variant(resize: '90x90') %>
+              <%# <% end %>
+            <%# <% end %>
             <% end %>
           <% end %>
         </tr>
