ビューの変更

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,8 @@
+<body class="bg-color">
+  <main  class="top-page">
   <%= render "shared/sidebar" %>
-<main class="h-100 d-flex flex-column justify-content-center img-1 px-5 bg-color">
 
+  <div class="d-flex flex-column img-1 px-5 col-12">
     <%= render "shared/header" %>
 
   <div class = "row overflow-scroll">
@@ -36,4 +38,5 @@
       <% end %>
     <% end %>
   </div>
-</main>
+  </main>
+</body>
