--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -38,11 +38,11 @@
     <link href="blog.css" rel="stylesheet">
 
   </head>
-<body class="w-100 bg-color">
+<body class="bg-color">
   <main  class="top-page">
   <%= render "shared/sidebar" %>
 
-  <div class="d-flex flex-column img-1 px-5 ">
+  <div class="d-flex flex-column img-1 px-5 col-12">
     <%= render "shared/header" %>
 
     <div class = "row overflow-scroll">
