--- a/app/assets/stylesheets/sidebars.css
+++ b/app/assets/stylesheets/sidebars.css
@@ -14,8 +14,8 @@ main {
   height: 100vh;
   height: -webkit-fill-available;
   max-height: 100vh;
-  overflow-x: auto;
-  overflow-y: hidden;
+  /* overflow-x: auto;
+  overflow-y: hidden; */
 }
 
 .b-example-divider {
